--- a/women.html
+++ b/women.html
@@ -10,12 +10,10 @@
   <body>
     <div id="container">
       <div>
-        <a href=""><h1>Site Name</h1></a>
-        <a href="./mens.html"><h1>Mens</h1></a>
+        <a href="./index.html"><h1>Mens</h1></a>
         <a href="./women.html"><h1>Womens</h1></a>
         <a href="./cart.html"><h1>Cart</h1></a>
         </div>
-        <h2>Womens</h2>
     </div>
   </body>
   <script>
